--- a/css/src/_video-showcase.scss
+++ b/css/src/_video-showcase.scss
@@ -54,6 +54,7 @@
 			position: absolute;
 			top: 35px;
 			left: 250px;
+			right: 150px;
 		}
 
 		ul {
